--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,7 @@
 services:
-  # === BACKEND (Express + Prisma + SQLite na trwałym dysku) ===
   - type: web
     name: shift-api
     env: node
-    plan: free
     rootDir: backend
     buildCommand: |
       npm install
@@ -12,10 +10,10 @@ services:
       npm run build
     startCommand: npm run start
     autoDeploy: true
-    disks:
-      - name: data
-        mountPath: /var/data
-        sizeGB: 1
+    disk:                # <-- POJEDYNCZE 'disk', nie 'disks'
+      name: data
+      mountPath: /var/data
+      sizeGB: 1
     envVars:
       - key: NODE_ENV
         value: production
@@ -23,14 +21,12 @@ services:
         value: file:/var/data/dev.db
 
 staticSites:
-  # === FRONTEND (Vite – statyczny) ===
   - name: shift-frontend
     rootDir: frontend
     buildCommand: |
       npm install
       npm run build
     publishPath: dist
-    # Uwaga: jeśli 'fromService' nie zadziała w Twoim koncie, ustawisz ręcznie VITE_API_BASE w panelu
-    envVars:
-      - key: VITE_PROJECT_TITLE
-        value: SHIFT - Digital Readiness Assessment
+    # jeśli trzeba, dodasz ręcznie VITE_API_BASE w UI po pierwszym deployu
+
+
