--- a/backend/package.json
+++ b/backend/package.json
@@ -1,33 +1,37 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "src/server.ts",
+  "name": "shift-api",
+  "private": true,
+  "type": "commonjs",
   "scripts": {
-    "dev": "ts-node src/server.ts",
-    "build":"tsc",
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js",
-    "prisma:generate":"npx prisma generate",
-    "prisma:migrate": "npx prisma migrate deploy",
-    "prisma:studio": "npx prisma studio"
+    "prisma:generate": "prisma generate",
+    "prisma:deploy": "prisma migrate deploy",
+    "prisma:dev": "prisma migrate dev"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.3",
+    "@prisma/client": "^5.22.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "pdfkit": "^0.17.2",
-    "prisma": "^6.16.3",
+    "pdfkit": "^0.15.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.7",
-    "@types/cors": "^2.8.17",
+    "prisma": "^5.22.0",
+    "tsx": "^4.16.0",
+    "typescript": "^5.6.3",
+    "@types/node": "^18.19.50",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.19.21",
-    "@types/pdfkit": "^0.17.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "@types/cors": "^2.8.17",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/pdfkit": "^0.13.6",
+    "@types/xlsx": "^0.0.36"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
