--- a/render.yaml
+++ b/render.yaml
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
-        key: NPM_CONFIG_PRODUCTION
+      - key: NPM_CONFIG_PRODUCTION
         value: "false"
       - key: NODE_VERSION
         value: 18
