--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,8 @@
-node_modules
+node_modules/
+dist/
 # Keep environment variables out of version control
 .env
-
+dev.db
+*.db
+*.db-journal
 /src/generated/prisma
