--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
       npx prisma generate
       npm run build
     startCommand: |
-      npx prisma migrate deploy || npx prisma db push
+      npx prisma db push
       node dist/server.js
     envVars:
       - key: NODE_ENV
